Fixed overflow

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -3,6 +3,7 @@
   border-style: solid;
   border: 0px 0px 2px 0px;
   border-color: DarkSlateGrey;
+  width: 100%;
 }
 li{
   list-style: none;
